fix main alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ header {
 }
 
 main {
-    padding: 2rem
+    padding: 1rem
 }
 
 
@@ -261,7 +261,6 @@ details[open] summary svg {
 /* .ch1, .ch2, .ch3, .ch4, .ch5 {width: fit-content;} */
 .map-container {
     width: fit-content;
-    margin: 0 auto;
 }
 
 .map {
@@ -275,10 +274,14 @@ details[open] summary svg {
 
 @media (min-width: 700px) {
     .map {
-    position: relative;
-    top: -250px;
-    left: 250px;
-    z-index: -1;
+        position: relative;
+        top: -250px;
+        left: 250px;
+        z-index: -1;
+    }
+
+    .map-container {
+        margin: 0 auto;
     }
 }
 
